Added applicaiton class and DI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,9 @@ dependencies {
 
     // Dagger (Dependency injection)
     annotationProcessor globalDependencies.daggerCompiler
+    annotationProcessor globalDependencies.daggerAndroidProcessor
     implementation globalDependencies.dagger
+    implementation globalDependencies.daggerAndroidSupport
 
     // ViewModel
     annotationProcessor globalDependencies.lifecycleCompiler
