--- a/deps-declaration.gradle
+++ b/deps-declaration.gradle
@@ -22,13 +22,13 @@ ext{
     autoValueGsonVersion = '0.8.0'
     autoValueWithVersion = '1.1.0-rc1'
     calligraphyVersion = '2.2.0'
-//    rx2FastAndroidNetworkingVersion = '1.0.2'
     retrofitVersion = '2.6.2'
     timberVersion = '4.7.1'
     glideVersion = '4.10.0'
     okhttp3LoggingInterceptorVersion = '3.9.1'
     smartTabLayoutVersion = '2.0.0@aar'
     persistentCookieJarVersion = 'v1.0.1'
+    pagingVersion = '1.0.1'
 
     // Test libraries
     junitVersion  = '4.12'
@@ -64,7 +64,6 @@ ext{
 
             glide: "com.github.bumptech.glide:glide:${glideVersion}",
             glideCompiler: "com.github.bumptech.glide:compiler:${glideVersion}",
-//            fastAndroidNetworking: "com.amitshekhar.android:rx2-android-networking:${rx2FastAndroidNetworkingVersion}",
 
             calligraphy: "uk.co.chrisjenx:calligraphy:${calligraphyVersion}",
             gson: "com.google.code.gson:gson:${gsonVersion}",
@@ -77,7 +76,10 @@ ext{
 
             smartTabLayout: "com.ogaclejapan.smarttablayout:library:${smartTabLayoutVersion}",
             smartTabLayoutUtils: "com.ogaclejapan.smarttablayout:utils-v4:${smartTabLayoutVersion}",
-            persistentCookieJar: "com.github.franmontiel:PersistentCookieJar:${persistentCookieJarVersion}"
+            persistentCookieJar: "com.github.franmontiel:PersistentCookieJar:${persistentCookieJarVersion}",
+
+            pagingRuntime: "android.arch.paging:runtime:${pagingVersion}",
+            pagingCommon: "android.arch.paging:common:${pagingVersion}"
     ]
 
     globalTestDependencies = [
