--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,8 +93,12 @@ dependencies {
     annotationProcessor globalDependencies.autoValueCompiler
     implementation globalDependencies.autoValueAnnotations
     annotationProcessor globalDependencies.autoValueGsonCompiler
-    implementation globalDependencies.autoValueGsonAnnotations
+//    implementation globalDependencies.autoValueGsonAnnotations
+    implementation globalDependencies.autoValueGsonRuntime
     annotationProcessor globalDependencies.autoValueWith
+
+
+    implementation globalDependencies.commonText
 
     // Test
     testImplementation globalTestDependencies.junit
