Fixed crashes for Android 10 - by changing dependency for calligraphy library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation globalDependencies.materialComponents
 
     // Fonts
+    implementation globalDependencies.viewPump
     implementation globalDependencies.calligraphy
 
     implementation globalDependencies.gson
